appId: host.exp.Exponent
---
- openLink: exp://192.168.1.215:8081/--/share-book?id=testbook1
- extendedWaitUntil:
    visible: "Paylaş"
    timeout: 30000
- waitForAnimationToEnd
- swipe:
    start: 90%, 72%
    end: 30%, 72%
- tapOn: "Minimal"
- waitForAnimationToEnd
- takeScreenshot: test-screenshots/s2-variant-5-minimal
